# market-timing

./: .gitignore  ETF vol drag.ipynb  MA200 fast and slow - optimizer - template.ipynb  MA200 fast and slow - sensitivity analysis - template.ipynb  MA200 fast and slow - template.ipynb  MA200 fast and slow - tradeable version - 1.1x.ipynb  MA200 fast and slow - tradeable version - 1.2x.ipynb  MA200 fast and slow - tradeable version.html  MA200 fast and slow - tradeable version.ipynb  MA200 fast and slow - untradeable version - 1.1x - all_history.ipynb  MA200 fast and slow - untradeable version - 1.1x.ipynb  MA200 fast and slow - untradeable version - 1.2x - all_history.ipynb  MA200 fast and slow - untradeable version - 1.2x.ipynb  MA200 fast and slow - untradeable version - all_history.ipynb  MA200 fast and slow - untradeable version.ipynb  Pipfile  Return Forecast - lightgbm.ipynb  Return Forecast.ipynb  Simple Diversification.ipynb  dbmf_nav.py  pyproject.toml  requirements.txt  sg_indices.csv  update.py
.ipynb_checkpoints/: MA200 fast and slow - tradeable version-checkpoint.ipynb
