[project]
name = "market-timing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "scipy>=1.15.2",
    "yfinance>=0.2.54",
]
